--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,13 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "9",
+    "axios": "^0.21.1",
+    "postcss": "7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.1.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2",
     "vite": "^2.1.5"
   }
