--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -23,6 +23,7 @@
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.9.1",
+    "fastify-cors": "^5.2.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
     "mongoose": "^5.12.3"
