--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.21.1",
     "postcss": "7",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "zustand": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.0",
