--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -20,13 +20,15 @@
     "@types/mongoose": "^5.10.4",
     "boom": "^7.3.0",
     "dotenv": "^8.2.0",
-    "fastify": "^3.0.0",
+    "fastify": "^3.14.2",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.9.1",
     "fastify-cors": "^5.2.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "mongoose": "^5.12.3"
+    "fastify-static": "^4.0.1",
+    "mongoose": "^5.12.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
